hphp/test/zend/good/ext/json/tests/json_encode_numeric.php.skipif
<?php
if (!extension_loaded("json")) {
	die('skip JSON extension not available in this build');
}	 
?>