hphp/test/zend/bad/ext/phar/tests/nophar.php.skipif
<?php if (extension_loaded("phar")) die("skip Phar extension must be disabled for this test"); ?>